# XAI

./: README.md  main.py  pyproject.toml  requirements.txt
00. Shap101/: demo.ipynb
01. Regression-Case-Study/: regression_shap.ipynb
02. Classification-Case-Study/: classification_shap.ipynb
03. Deep Learning-Case-Study/01. ANN-torch/: ann_shap.ipynb
03. Deep Learning-Case-Study/02. CNN- tensorflow/: cnn_shap.ipynb
